--- a/eicw/eicw.html
+++ b/eicw/eicw.html
@@ -40,48 +40,40 @@
 
 <body>
 
-
-    <!-- Floating Background Elements -->
-    <div class="floating-elements">
-        <div class="floating-circle"></div>
-        <div class="floating-circle"></div>
-        <div class="floating-circle"></div>
-    </div>
-
-    <!-- Advanced Navigation Bar -->
+    <!-- Navigation Bar -->
     <nav class="navbar-container">
         <div class="navbar">
-            <!-- Brand/Logo -->
+            <!-- Logo -->
             <a href="../index.html"><img src="../img/core-img/logo.png" alt="logo" class="logo" /></a>
 
             <!-- Navigation Links -->
             <ul class="navbar-nav" id="navbarNav">
                 <li class="nav-item">
-                    <a href="#home" class="nav-link">
+                    <a href="../index.html" class="nav-link">
                         <i class="fa-duotone fa-regular fa-house"></i>
                         <span>Home</span>
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="#about" class="nav-link">
+                    <a href="../about.html" class="nav-link">
                         <i class="fa-duotone fa-regular fa-circle-user"></i>
                         <span>About</span>
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="#services" class="nav-link">
+                    <a href="../works-by-nrfz.html" class="nav-link">
                         <i class="fa-duotone fa-solid fa-pen-paintbrush"></i>
                         <span>Works by NRFZ</span>
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="#portfolio" class="nav-link active">
+                    <a href="../eicw/eicw.html" class="nav-link active">
                         <i class="fa-duotone fa-solid fa-map-location"></i>
                         <span>EICW</span>
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="#contact" class="nav-link">
+                    <a href="../blog.html" class="nav-link">
                         <i class="fa-duotone fa-solid fa-comment"></i>
                         <span>Blog</span>
                     </a>
@@ -94,7 +86,6 @@
                     </a>
                 </li>
             </ul>
-
 
             <!-- Mobile Toggle -->
             <button class="mobile-toggle" id="mobileToggle">
@@ -163,6 +154,7 @@
             </li>
         </ul>
     </div>
+
 
     <!-- Scroll Indicator -->
     <div id="scroll-indicator-container">
