--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="description" content>
-       <meta charset="UTF-8">
+    <meta charset="UTF-8">
     <meta name="description" content>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="google-site-verification" content="57TuruPNu5wqSSia_cUehl5t9Gh1AbxrHNPcMiFx-aQ" />
@@ -16,7 +16,7 @@
 
     <link rel="icon" href="./img/core-img/favicon.png">
 
-     <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.7.2/css/all.css">
+    <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v7.0.0/css/all.css" />
 
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/style-breakpoints.css">
@@ -43,34 +43,120 @@
 
 <body>
 
-    <!-- Preloader Section -->
-    <!-- <div id="preloader">
-        <div class="loader"></div>
-        <p id="preloader-text">Just a moment...</p>
-    </div> -->
+    <!-- Navigation Bar -->
+    <nav class="navbar-container">
+        <div class="navbar">
+            <!-- Logo -->
+            <a href="../index.html"><img src="../img/core-img/logo.png" alt="logo" class="logo" /></a>
 
-    <header>
-        <a href="./index.html"><img src="./img/core-img/logo.png" alt="logo" class="logo" /></a>
+            <!-- Navigation Links -->
+            <ul class="navbar-nav" id="navbarNav">
+                <li class="nav-item">
+                    <a href="#home" class="nav-link active">
+                        <i class="fa-duotone fa-regular fa-house"></i>
+                        <span>Home</span>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="#about" class="nav-link">
+                        <i class="fa-duotone fa-regular fa-circle-user"></i>
+                        <span>About</span>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="#services" class="nav-link">
+                        <i class="fa-duotone fa-solid fa-pen-paintbrush"></i>
+                        <span>Works by NRFZ</span>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="eicw/eicw.html" class="nav-link">
+                        <i class="fa-duotone fa-solid fa-map-location"></i>
+                        <span>EICW</span>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="#contact" class="nav-link">
+                        <i class="fa-duotone fa-solid fa-comment"></i>
+                        <span>Blog</span>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-item">
+                        <button class="wbnrfz_btn_theme" id="dark-mode-toggle-desktop" title="Toggle Dark/Light Mode!">
+                            <i class="fa-solid fa-moon-stars" id="theme-icon-desktop"></i>
+                        </button>
+                    </a>
+                </li>
+            </ul>
 
-        <input type="checkbox" id="check" />
-        <label for="check" class="icons">
-            <i class="fa-solid fa-bars" id="menu-icon"></i>
-            <i class="fa-solid fa-xmark" id="close-icon"></i>
-        </label>
+            <!-- Mobile Toggle -->
+            <button class="mobile-toggle" id="mobileToggle">
+                <div class="hamburger">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
+            </button>
+        </div>
 
-        <nav class="navbar navbar-mobile">
-            <a href="#" class="nav-item active">Home</a>
-            <a href="./about.html" class="nav-item">About</a>
-            <a href="./works-by-nrfz.html" class="nav-item">Works By NRFZ</a>
-            <a href="eicw/eicw.html" class="nav-item">EICW</a>
-            <a href="./blog.html" class="nav-item">Blog</a>
-            <a href="#" class="nav-item">
-                <button class="wbnrfz_btn_theme" id="dark-mode-toggle" title="Toggle Dark/Light Mode!">
-                    <i class="fa-solid fa-moon-stars" id="theme-icon"></i>
-                </button>
+        </div>
+    </nav>
+
+    <!-- Mobile Menu Overlay -->
+    <div class="mobile-menu-overlay" id="mobileMenuOverlay"></div>
+
+    <!-- Mobile Menu -->
+    <div class="mobile-menu" id="mobileMenu">
+        <div class="mobile-menu-header">
+            <a href="#" class="mobile-menu-brand">
+                <span class="brand-text">
+                    <li class="mobile-menu-item mobile-theme-toggle">
+                        <button class="wbnrfz_btn_theme mobile-theme-btn" id="dark-mode-toggle-mobile"
+                            title="Toggle Dark/Light Mode!">
+                            <i class="fa-solid fa-moon-stars" id="theme-icon-mobile"></i>
+                        </button>
+                    </li>
+                </span>
             </a>
-        </nav>
-    </header>
+            <button class="mobile-menu-close" id="mobileMenuClose">
+                <span>×</span>
+            </button>
+        </div>
+
+        <ul class="mobile-menu-nav">
+            <li class="mobile-menu-item">
+                <a href="#home" class="mobile-menu-link">
+                    <i class="fa-duotone fa-regular fa-house"></i>
+                    <span>Home</span>
+                </a>
+            </li>
+            <li class="mobile-menu-item">
+                <a href="#about" class="mobile-menu-link">
+                    <i class="fa-duotone fa-regular fa-circle-user"></i>
+                    <span>About</span>
+                </a>
+            </li>
+            <li class="mobile-menu-item">
+                <a href="#services" class="mobile-menu-link">
+                    <i class="fa-duotone fa-solid fa-pen-paintbrush"></i>
+                    <span>Works by NRFZ</span>
+                </a>
+            </li>
+            <li class="mobile-menu-item">
+                <a href="eicw/eicw.html" class="mobile-menu-link active">
+                    <i class="fa-duotone fa-solid fa-map-location"></i>
+                    <span>EICW</span>
+                </a>
+            </li>
+            <li class="mobile-menu-item">
+                <a href="#contact" class="mobile-menu-link">
+                    <i class="fa-duotone fa-solid fa-comment"></i>
+                    <span>Blog</span>
+                </a>
+            </li>
+        </ul>
+    </div>
 
 
     <!-- ============================================= Hero Section ============================================= -->
@@ -148,8 +234,8 @@
                         <img src="https://i.imgur.com/tKQajl6.png" alt="tdc-v3">
                         <div class="hover-content-blog">
                             <h4>Train Delays Tracker</h4>
-                            <a class="info" href="https://nurafianzulkifli.github.io/train-delays-checker/" class="portfolio-img"><i
-                                    class="fa-solid fa-arrow-right"></i></a>
+                            <a class="info" href="https://nurafianzulkifli.github.io/train-delays-checker/"
+                                class="portfolio-img"><i class="fa-solid fa-arrow-right"></i></a>
                         </div>
                     </div>
                 </div>
@@ -166,8 +252,7 @@
                     </div>
                 </div>
 
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item ds mc mb-30 wow fadeIn"
-                    data-wow-delay="700ms">
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item ds mc mb-30 wow fadeIn" data-wow-delay="700ms">
                     <div class="single-portfolio-content">
                         <img src="https://i.imgur.com/GrXbpDs.png" alt="bus-stop-pole">
                         <div class="hover-content-blog">
@@ -297,26 +382,27 @@
         </div>
     </section>
 
-    <footer class="footer-area">
-        <div class="container">
-            <div class="footer-content d-flex flex-column align-items-center text-center">
-                <!-- Social Links -->
-                <div class="social-info">
-                    <a href="https://github.com/nurafianZulkifli"><i class="fa-brands fa-github"
-                            aria-hidden="true"></i></a>
-                    <a href="https://twitter.com/nrfzlkf_"><i class="fa-brands fa-x-twitter" aria-hidden="true"></i></a>
-                    <a href="https://www.facebook.com/Nrfnzlkf/"><i class="fa-brands fa-facebook"
-                            aria-hidden="true"></i></a>
-                    <a href="https://www.instagram.com/nrfzlkf/"><i class="fa-brands fa-instagram"
-                            aria-hidden="true"></i></a>
-                </div>
-                <!-- Copywrite Text -->
-                <div class="copywrite-text">
-                    <p>&copy;
-                        <script>document.write(new Date().getFullYear());</script> Nurafian Zulkifli
-                    </p>
-                </div>
+    <!-- Footer -->
+    <footer class="footer">
+        <div class="footer-content">
+            <div class="footer-social">
+                <a href="#" class="social-link">
+                    <i class="fa-brands fa-github" aria-hidden="true"></i>
+                </a>
+                <a href="#" class="social-link">
+                    <i class="fa-brands fa-x-twitter" aria-hidden="true"></i>
+                </a>
+                <a href="#" class="social-link">
+                    <i class="fa-brands fa-facebook" aria-hidden="true"></i>
+                </a>
+                <a href="#" class="social-link">
+                    <i class="fa-brands fa-instagram" aria-hidden="true"></i>
+                </a>
             </div>
+        </div>
+
+        <div class="footer-copy">
+            © 2025 Nurafian Zulkifli
         </div>
     </footer>
 
