XXXX-XX Feature Update for Version Next (6.0.0)

--- a/eicw/eicw.html
+++ b/eicw/eicw.html
@@ -67,7 +67,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="../eicw/eicw.html" class="nav-link active">
+                    <a href="#" class="nav-link active">
                         <i class="fa-duotone fa-solid fa-map-location"></i>
                         <span>EICW</span>
                     </a>
@@ -123,31 +123,31 @@
 
         <ul class="mobile-menu-nav">
             <li class="mobile-menu-item">
-                <a href="#home" class="mobile-menu-link">
+                <a href="../index.html" class="mobile-menu-link">
                     <i class="fa-duotone fa-regular fa-house"></i>
                     <span>Home</span>
                 </a>
             </li>
             <li class="mobile-menu-item">
-                <a href="#about" class="mobile-menu-link">
+                <a href="../about.html" class="mobile-menu-link">
                     <i class="fa-duotone fa-regular fa-circle-user"></i>
                     <span>About</span>
                 </a>
             </li>
             <li class="mobile-menu-item">
-                <a href="#services" class="mobile-menu-link">
+                <a href="../works-by-nrfz.html" class="mobile-menu-link">
                     <i class="fa-duotone fa-solid fa-pen-paintbrush"></i>
                     <span>Works by NRFZ</span>
                 </a>
             </li>
             <li class="mobile-menu-item">
-                <a href="#portfolio" class="mobile-menu-link active">
+                <a href="#" class="mobile-menu-link active">
                     <i class="fa-duotone fa-solid fa-map-location"></i>
                     <span>EICW</span>
                 </a>
             </li>
             <li class="mobile-menu-item">
-                <a href="#contact" class="mobile-menu-link">
+                <a href="../blog.html" class="mobile-menu-link">
                     <i class="fa-duotone fa-solid fa-comment"></i>
                     <span>Blog</span>
                 </a>
@@ -164,7 +164,7 @@
 
     <!-- Section Header -->
     <section class="breadcrumb-area-eicw-cover bg-img bg-overlay" id="cv-img"
-        style="background-image: url(img/cover-light.png); height: 80vh;">
+        style="background-image: url(img/cover-light.png); height: 50vh;">
         <div class="container h-100">
             <div class="row h-100 align-items-center">
                 <div class="col-12">
@@ -181,45 +181,79 @@
     <section class="about-me-sum clearfix">
         <div class="wbnrfz_eicw">
 
-            <div class="scrollable-tabs-container">
-                <div class="left-arrow">
-                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                        stroke="currentColor" class="size-6">
-                        <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 19.5 8.25 12l7.5-7.5" />
-                    </svg>
-
+            <div class="page-header-section">
+                <div class="container container-mobile container-mobile-header">
+                    <div class="breadcrumb-wrapper">
+                        <nav aria-label="breadcrumb">
+                            <ol class="breadcrumb">
+                                <li class="breadcrumb-item">
+                                    <a href="../index.html">
+                                        <i class="fa-solid fa-house"></i>
+                                        Home
+                                    </a>
+                                </li>
+                                <li class="breadcrumb-item">
+                                    <a href="#"><i
+                                            class="fa-solid fa-map-location"></i> EICW</a>     
+                                </li>
+                                <!-- <li class="breadcrumb-item active" aria-current="page">
+                                    EICW
+                                </li> -->
+                            </ol>
+                        </nav>
+                        <div class="page-title-wrapper">
+                            <h1 class="page-title">Experimenting Improvements of Current Wayfinding</h1>
+                            <p class="page-subtitle">7 mins read</p>
+                        </div>
+                    </div>
                 </div>
 
-                <ul>
-                    <li>
-                        <a href="eicw.html" class="active">Design System Introduction</a>
-                    </li>
+                <div class="scrollable-tabs-container">
+                    <div class="left-arrow">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                            stroke="currentColor" class="size-6">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 19.5 8.25 12l7.5-7.5" />
+                        </svg>
 
-                    <li>
-                        <a href="eicw-2.html">Proposed Wayfinding Changes - Trains</a>
-                    </li>
+                    </div>
 
-                    <li>
-                        <a href="eicw-3.html">Proposed Wayfinding Changes - Buses</a>
-                    </li>
+                    <ul>
+                        <li>
+                            <a href="eicw.html" class="active">Design System Introduction</a>
+                        </li>
 
-                    <li>
-                        <a href="eicw-4.html">Proposed UI/UX Changes</a>
-                    </li>
+                        <li>
+                            <a href="eicw-2.html">Proposed Wayfinding Changes - Trains</a>
+                        </li>
 
-                    <li>
-                        <a href="eicw-5.html">Rethinking CCL6 Signages</a>
-                    </li>
-                </ul>
+                        <li>
+                            <a href="eicw-3.html">Proposed Wayfinding Changes - Buses</a>
+                        </li>
 
-                <div class="right-arrow active">
-                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                        stroke="currentColor" class="size-6">
-                        <path stroke-linecap="round" stroke-linejoin="round" d="m8.25 4.5 7.5 7.5-7.5 7.5" />
-                    </svg>
+                        <li>
+                            <a href="eicw-4.html">Proposed UI/UX Changes</a>
+                        </li>
 
+                        <li>
+                            <a href="eicw-5.html">Rethinking CCL6 Signages</a>
+                        </li>
+                    </ul>
+
+                    <div class="right-arrow active">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                            stroke="currentColor" class="size-6">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="m8.25 4.5 7.5 7.5-7.5 7.5" />
+                        </svg>
+
+                    </div>
                 </div>
+                <hr>
             </div>
+
+
+
+
+
 
             <div class="container container-mobile">
                 <div class="row justify-content-center">
@@ -229,7 +263,7 @@
                             <!-- Preface -->
                             <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms" id="dsi">
                                 <div class="info justify-content-center">
-                                    <h2 class="mb-3 text-center" style="font-size: 30px; font-weight:bold;">Design
+                                    <h2 class="mb-3" style="font-size: 30px; font-weight:bold;">Design
                                         System Introduction</h2>
                                     <p style="text-align: left;">The new Wayfinding system was first launched on the
                                         Thomson-East
@@ -492,6 +526,10 @@
     <script src="../js/default-assets/active.js"></script>
 
     <!-- <script src="../js/preloader.js"></script> -->
+
+
+    <!-- Bottom Blur Overlay -->
+    <div class="bottom-blur-overlay"></div>
 
 </body>
 
