--- a/index.html
+++ b/index.html
@@ -47,24 +47,24 @@
     <nav class="navbar-container">
         <div class="navbar">
             <!-- Logo -->
-            <a href="../index.html"><img src="../img/core-img/logo.png" alt="logo" class="logo" /></a>
+            <a href="index.html"><img src="img/core-img/logo.png" alt="logo" class="logo" /></a>
 
             <!-- Navigation Links -->
             <ul class="navbar-nav" id="navbarNav">
                 <li class="nav-item">
-                    <a href="#home" class="nav-link active">
+                    <a href="#" class="nav-link active">
                         <i class="fa-duotone fa-regular fa-house"></i>
                         <span>Home</span>
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="#about" class="nav-link">
+                    <a href="about.html" class="nav-link">
                         <i class="fa-duotone fa-regular fa-circle-user"></i>
                         <span>About</span>
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="#services" class="nav-link">
+                    <a href="works-by-nrfz.html" class="nav-link">
                         <i class="fa-duotone fa-solid fa-pen-paintbrush"></i>
                         <span>Works by NRFZ</span>
                     </a>
@@ -76,7 +76,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="#contact" class="nav-link">
+                    <a href="blog.html" class="nav-link">
                         <i class="fa-duotone fa-solid fa-comment"></i>
                         <span>Blog</span>
                     </a>
@@ -165,7 +165,7 @@
             <div class="row h-100 align-items-center">
                 <div class="col-12">
                     <div class="breadcrumb-content text-center">
-                        <img class="profile-pic wow fadeInUp" data-wow-delay="100ms" src="img/bg-img/about.png"
+                        <img class="profile-pic wow fadeIn" data-wow-delay="100ms" src="img/bg-img/about.png"
                             alt="profile-pic">
                         <div class="profile-det wow fadeIn" data-wow-delay="200ms">
                             <h2 class="profile-name wow fadeIn" data-wow-delay="400ms">Nurafian Zulkifli</h2>
@@ -174,7 +174,7 @@
                             </h2>
                         </div>
 
-                        <div class="profile-link wow fadeInUp" data-wow-delay="700ms">
+                        <div class="profile-link wow fadeIn" data-wow-delay="700ms">
                             <a href="https://github.com/nurafianZulkifli" target="_blank" class="media_link"
                                 title="GitHub">
                                 <div class="fa-brands fa-github" style="font-size: 30px; padding-bottom: 25px;"></div>
@@ -205,7 +205,7 @@
     </section><!-- End Hero -->
 
 
-    <div class="pw-portfolio-area section-padding-80 clearfix" id="featured">
+    <div class="pw-portfolio-area clearfix" id="featured">
         <div class="container-fluid">
             <div class="row">
                 <div class="col-12">
@@ -273,7 +273,7 @@
     </div>
 
 
-    <section class="about-me-area section-padding-50 clearfix">
+    <section class="about-me-area clearfix">
         <div class="container container-xxl">
             <div class="row">
                 <div class="col-12">
