XXXX-XX Feature Update for Version Next (6.0.0)

--- a/eicw/eicw.html
+++ b/eicw/eicw.html
@@ -50,31 +50,31 @@
             <ul class="navbar-nav" id="navbarNav">
                 <li class="nav-item">
                     <a href="../index.html" class="nav-link">
-                        <i class="fa-duotone fa-regular fa-house"></i>
+                        <i class="fa-solid fa-regular fa-house"></i>
                         <span>Home</span>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a href="../about.html" class="nav-link">
-                        <i class="fa-duotone fa-regular fa-circle-user"></i>
+                        <i class="fa-solid fa-regular fa-circle-user"></i>
                         <span>About</span>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a href="../works-by-nrfz.html" class="nav-link">
-                        <i class="fa-duotone fa-solid fa-pen-paintbrush"></i>
+                        <i class="fa-solid fa-pen-paintbrush"></i>
                         <span>Works by NRFZ</span>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a href="#" class="nav-link active">
-                        <i class="fa-duotone fa-solid fa-map-location"></i>
+                        <i class="fa-solid fa-map-location"></i>
                         <span>EICW</span>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a href="../blog.html" class="nav-link">
-                        <i class="fa-duotone fa-solid fa-comment"></i>
+                        <i class="fa-solid fa-comment"></i>
                         <span>Blog</span>
                     </a>
                 </li>
@@ -124,31 +124,31 @@
         <ul class="mobile-menu-nav">
             <li class="mobile-menu-item">
                 <a href="../index.html" class="mobile-menu-link">
-                    <i class="fa-duotone fa-regular fa-house"></i>
+                    <i class="fa-solid fa-regular fa-house"></i>
                     <span>Home</span>
                 </a>
             </li>
             <li class="mobile-menu-item">
                 <a href="../about.html" class="mobile-menu-link">
-                    <i class="fa-duotone fa-regular fa-circle-user"></i>
+                    <i class="fa-solid fa-regular fa-circle-user"></i>
                     <span>About</span>
                 </a>
             </li>
             <li class="mobile-menu-item">
                 <a href="../works-by-nrfz.html" class="mobile-menu-link">
-                    <i class="fa-duotone fa-solid fa-pen-paintbrush"></i>
+                    <i class="fa-solid fa-pen-paintbrush"></i>
                     <span>Works by NRFZ</span>
                 </a>
             </li>
             <li class="mobile-menu-item">
                 <a href="#" class="mobile-menu-link active">
-                    <i class="fa-duotone fa-solid fa-map-location"></i>
+                    <i class="fa-solid fa-map-location"></i>
                     <span>EICW</span>
                 </a>
             </li>
             <li class="mobile-menu-item">
                 <a href="../blog.html" class="mobile-menu-link">
-                    <i class="fa-duotone fa-solid fa-comment"></i>
+                    <i class="fa-solid fa-comment"></i>
                     <span>Blog</span>
                 </a>
             </li>
