--- a/index.html
+++ b/index.html
@@ -53,31 +53,31 @@
             <ul class="navbar-nav" id="navbarNav">
                 <li class="nav-item">
                     <a href="#" class="nav-link active">
-                        <i class="fa-duotone fa-regular fa-house"></i>
+                        <i class="fa-solid fa-house"></i>
                         <span>Home</span>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a href="about.html" class="nav-link">
-                        <i class="fa-duotone fa-regular fa-circle-user"></i>
+                        <i class="fa-solid fa-circle-user"></i>
                         <span>About</span>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a href="works-by-nrfz.html" class="nav-link">
-                        <i class="fa-duotone fa-solid fa-pen-paintbrush"></i>
+                        <i class="fa-solid fa-pen-paintbrush"></i>
                         <span>Works by NRFZ</span>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a href="eicw/eicw.html" class="nav-link">
-                        <i class="fa-duotone fa-solid fa-map-location"></i>
+                        <i class="fa-solid fa-map-location"></i>
                         <span>EICW</span>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a href="blog.html" class="nav-link">
-                        <i class="fa-duotone fa-solid fa-comment"></i>
+                        <i class="fa-solid fa-comment"></i>
                         <span>Blog</span>
                     </a>
                 </li>
@@ -127,31 +127,31 @@
         <ul class="mobile-menu-nav">
             <li class="mobile-menu-item">
                 <a href="#home" class="mobile-menu-link">
-                    <i class="fa-duotone fa-regular fa-house"></i>
+                    <i class="fa-solid fa-house"></i>
                     <span>Home</span>
                 </a>
             </li>
             <li class="mobile-menu-item">
                 <a href="#about" class="mobile-menu-link">
-                    <i class="fa-duotone fa-regular fa-circle-user"></i>
+                    <i class="fa-solid fa-regular fa-circle-user"></i>
                     <span>About</span>
                 </a>
             </li>
             <li class="mobile-menu-item">
                 <a href="#services" class="mobile-menu-link">
-                    <i class="fa-duotone fa-solid fa-pen-paintbrush"></i>
+                    <i class="fa-solid fa-pen-paintbrush"></i>
                     <span>Works by NRFZ</span>
                 </a>
             </li>
             <li class="mobile-menu-item">
                 <a href="eicw/eicw.html" class="mobile-menu-link active">
-                    <i class="fa-duotone fa-solid fa-map-location"></i>
+                    <i class="fa-solid fa-map-location"></i>
                     <span>EICW</span>
                 </a>
             </li>
             <li class="mobile-menu-item">
                 <a href="#contact" class="mobile-menu-link">
-                    <i class="fa-duotone fa-solid fa-comment"></i>
+                    <i class="fa-solid fa-comment"></i>
                     <span>Blog</span>
                 </a>
             </li>
@@ -161,7 +161,7 @@
 
     <!-- ============================================= Hero Section ============================================= -->
     <section id="hero" class="d-flex flex-column justify-content-center">
-        <div class="container h-100">
+        <!-- <div class="container h-100">
             <div class="row h-100 align-items-center">
                 <div class="col-12">
                     <div class="breadcrumb-content text-center">
@@ -199,7 +199,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
 
 
     </section><!-- End Hero -->
