--- a/index.html
+++ b/index.html
@@ -126,19 +126,19 @@
 
         <ul class="mobile-menu-nav">
             <li class="mobile-menu-item">
-                <a href="#home" class="mobile-menu-link">
-                    <i class="fa-solid fa-house"></i>
+                <a href="#" class="mobile-menu-link">
+                    <i class="fa-solid fa-regular fa-house"></i>
                     <span>Home</span>
                 </a>
             </li>
             <li class="mobile-menu-item">
-                <a href="#about" class="mobile-menu-link">
+                <a href="about.html" class="mobile-menu-link">
                     <i class="fa-solid fa-regular fa-circle-user"></i>
                     <span>About</span>
                 </a>
             </li>
             <li class="mobile-menu-item">
-                <a href="#services" class="mobile-menu-link">
+                <a href="works-by-nrfz.html" class="mobile-menu-link">
                     <i class="fa-solid fa-pen-paintbrush"></i>
                     <span>Works by NRFZ</span>
                 </a>
@@ -150,7 +150,7 @@
                 </a>
             </li>
             <li class="mobile-menu-item">
-                <a href="#contact" class="mobile-menu-link">
+                <a href="blog.html" class="mobile-menu-link">
                     <i class="fa-solid fa-comment"></i>
                     <span>Blog</span>
                 </a>
