XXXX-XX Feature Update for Version Next (6.0.0)

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
         <ul class="mobile-menu-nav">
             <li class="mobile-menu-item">
-                <a href="#" class="mobile-menu-link">
+                <a href="#" class="mobile-menu-link active">
                     <i class="fa-solid fa-regular fa-house"></i>
                     <span>Home</span>
                 </a>
@@ -144,7 +144,7 @@
                 </a>
             </li>
             <li class="mobile-menu-item">
-                <a href="eicw/eicw.html" class="mobile-menu-link active">
+                <a href="eicw/eicw.html" class="mobile-menu-link">
                     <i class="fa-solid fa-map-location"></i>
                     <span>EICW</span>
                 </a>
