--- a/eicw/eicw-2.html
+++ b/eicw/eicw-2.html
@@ -38,130 +38,226 @@
 
 <body>
 
-    <!-- Preloader Section -->
-    <!-- <div id="preloader">
-        <div class="loader"></div>
-        <p id="preloader-text">Just a moment...</p>
-    </div> -->
+    <!-- Navigation Bar -->
+    <nav class="navbar-container">
+        <div class="navbar">
+            <!-- Logo -->
+            <a href="../index.html"><img src="../img/core-img/logo.png" alt="logo" class="logo" /></a>
 
+            <!-- Navigation Links -->
+            <ul class="navbar-nav" id="navbarNav">
+                <li class="nav-item">
+                    <a href="../index.html" class="nav-link">
+                        <i class="fa-solid fa-regular fa-house"></i>
+                        <span>Home</span>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="../about.html" class="nav-link">
+                        <i class="fa-solid fa-regular fa-circle-user"></i>
+                        <span>About</span>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="../works-by-nrfz.html" class="nav-link">
+                        <i class="fa-solid fa-pen-paintbrush"></i>
+                        <span>Works by NRFZ</span>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link active">
+                        <i class="fa-solid fa-map-location"></i>
+                        <span>EICW</span>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="../blog.html" class="nav-link">
+                        <i class="fa-solid fa-comment"></i>
+                        <span>Blog</span>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-item">
+                        <button class="wbnrfz_btn_theme" id="dark-mode-toggle-desktop" title="Toggle Dark/Light Mode!">
+                            <i class="fa-solid fa-moon-stars" id="theme-icon-desktop"></i>
+                        </button>
+                    </a>
+                </li>
+            </ul>
+
+            <!-- Mobile Toggle -->
+            <button class="mobile-toggle" id="mobileToggle">
+                <div class="hamburger">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
+            </button>
+        </div>
+
+        </div>
+    </nav>
+
+    <!-- Mobile Menu Overlay -->
+    <div class="mobile-menu-overlay" id="mobileMenuOverlay"></div>
+
+    <!-- Mobile Menu -->
+    <div class="mobile-menu" id="mobileMenu">
+        <div class="mobile-menu-header">
+            <a href="#" class="mobile-menu-brand">
+                <span class="brand-text">
+                    <li class="mobile-menu-item mobile-theme-toggle">
+                        <button class="wbnrfz_btn_theme mobile-theme-btn" id="dark-mode-toggle-mobile"
+                            title="Toggle Dark/Light Mode!">
+                            <i class="fa-solid fa-moon-stars" id="theme-icon-mobile"></i>
+                        </button>
+                    </li>
+                </span>
+            </a>
+            <button class="mobile-menu-close" id="mobileMenuClose">
+                <span>×</span>
+            </button>
+        </div>
+
+        <ul class="mobile-menu-nav">
+            <li class="mobile-menu-item">
+                <a href="../index.html" class="mobile-menu-link">
+                    <i class="fa-solid fa-regular fa-house"></i>
+                    <span>Home</span>
+                </a>
+            </li>
+            <li class="mobile-menu-item">
+                <a href="../about.html" class="mobile-menu-link">
+                    <i class="fa-solid fa-regular fa-circle-user"></i>
+                    <span>About</span>
+                </a>
+            </li>
+            <li class="mobile-menu-item">
+                <a href="../works-by-nrfz.html" class="mobile-menu-link">
+                    <i class="fa-solid fa-pen-paintbrush"></i>
+                    <span>Works by NRFZ</span>
+                </a>
+            </li>
+            <li class="mobile-menu-item">
+                <a href="#" class="mobile-menu-link active">
+                    <i class="fa-solid fa-map-location"></i>
+                    <span>EICW</span>
+                </a>
+            </li>
+            <li class="mobile-menu-item">
+                <a href="../blog.html" class="mobile-menu-link">
+                    <i class="fa-solid fa-comment"></i>
+                    <span>Blog</span>
+                </a>
+            </li>
+        </ul>
+    </div>
+
+
+    <!-- Scroll Indicator -->
     <div id="scroll-indicator-container">
         <div id="scroll-indicator"></div>
     </div>
 
 
-    <header>
-        <a href="../index.html"><img src="../img/core-img/logo.png" alt="logo" class="logo" /></a>
+    <!------------------------------------------------------------------------ Start of Sections ------------------------------------------------------------------------>
 
-        <input type="checkbox" id="check" />
-        <label for="check" class="icons">
-            <i class="fa-solid fa-bars" id="menu-icon"></i>
-            <i class="fa-solid fa-xmark" id="close-icon"></i>
-        </label>
+    <!-- Cover Header -->
+    <section class="breadcrumb-area-eicw-cover bg-img bg-overlay" id="cv-img"
+        style="background-image: url(img/cover-light.png); height: 50vh;">
+        <div class="container h-100">
+            <div class="row h-100 align-items-center">
+                <div class="col-12">
+                </div>
+            </div>
+        </div>
+    </section>
 
-        <nav class="navbar navbar-mobile">
-            <a href="../index.html" class="nav-item">Home</a>
-            <a href="../about.html" class="nav-item">About</a>
-            <a href="../works-by-nrfz.html" class="nav-item">Works By NRFZ</a>
-            <a href="eicw.html" class="nav-item active">EICW</a>
-            <a href="../blog.html" class="nav-item">Blog</a>
-            <a href="#" class="nav-item">
-                <button class="wbnrfz_btn_theme" id="dark-mode-toggle" title="Toggle Dark/Light Mode!">
-                    <i class="fa-solid fa-moon-stars" id="theme-icon"></i>
-                </button>
-            </a>
-        </nav>
-    </header>
-
-    <section class="wbnrfz-summ breadcrumb-area-eicw-cover bg-img parallax" id="cv-img"
-        style="background-image: url(img/cover-light.png); height: 85vh;">
-        <div class="wbnrfz_details_blog">
-            <div class="container">
-                <div class="portfolio-controls d-flex justify-content-between align-items-center">
-                    <!-- Filter Buttons -->
-                    <div class="portfolio-filter mt-3">
-                        <div class="col-lg-12">
-                            <div class="main-title">
-                                <nav aria-label="breadcrumb">
-                                    <ol class="breadcrumb">
-                                        <li class="breadcrumb-item"><a href="https://nurafianzulkifli.com/index.html">
-                                                Home</a>
-                                        </li>
-                                        <li class="breadcrumb-item active"><a href="#">
-                                                EICW
-                                            </a>
-                                        </li>
-                                    </ol>
-                                </nav>
-                                <h1 class="brc">Proposed Wayfinding Changes - Trains</h1>
-                            </div>
+    <!-- Title/Breadcrumbs -->
+    <section class="about-me-sum clearfix">
+        <div class="wbnrfz_eicw">
+            <div class="page-header-section">
+                <div class="container container-mobile container-mobile-header">
+                    <div class="breadcrumb-wrapper">
+                        <nav aria-label="breadcrumb">
+                            <ol class="breadcrumb">
+                                <li class="breadcrumb-item">
+                                    <a href="../index.html">
+                                        <i class="fa-solid fa-house"></i>
+                                    </a>
+                                </li>
+                                <li class="breadcrumb-item">
+                                    <a href="eicw.html">EICW</a>
+                                </li>
+                                <!-- <li class="breadcrumb-item active" aria-current="page">
+                                    EICW
+                                </li> -->
+                            </ol>
+                        </nav>
+                        <div class="page-title-wrapper">
+                            <h1 class="page-title">Proposed Wayfinding Changes - Trains</h1>
+                            <p class="page-subtitle">9 mins read</p>
                         </div>
                     </div>
-                    <!-- Collapsible Header -->
-                    <!-- <div class="collapsible-header" data-bs-toggle="collapse" data-bs-target="#portfolioFilter"
-                        aria-controls="portfolioFilter" style="cursor: pointer;" title="Go To">
-                        <i class="fa-solid fa-chevron-down nav-chev"></i>
-                    </div> -->
                 </div>
-                <!-- Collapsible Content -->
 
+                <div class="scrollable-tabs-container">
+                    <div class="left-arrow">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                            stroke="currentColor" class="size-6">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 19.5 8.25 12l7.5-7.5" />
+                        </svg>
+
+                    </div>
+
+                    <ul>
+                        <li>
+                            <a href="eicw.html">Design System Introduction</a>
+                        </li>
+
+                        <li>
+                            <a href="eicw-2.html" class="active">Proposed Wayfinding Changes - Trains</a>
+                        </li>
+
+                        <li>
+                            <a href="eicw-3.html">Proposed Wayfinding Changes - Buses</a>
+                        </li>
+
+                        <li>
+                            <a href="eicw-4.html">Proposed UI/UX Changes</a>
+                        </li>
+
+                        <li>
+                            <a href="eicw-5.html">Rethinking CCL6 Signages</a>
+                        </li>
+                    </ul>
+
+                    <div class="right-arrow active">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                            stroke="currentColor" class="size-6">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="m8.25 4.5 7.5 7.5-7.5 7.5" />
+                        </svg>
+
+                    </div>
+                </div>
+                <hr>
             </div>
+
         </div>
     </section>
 
     <!-- Section Content -->
     <section class="about-me-sum clearfix">
         <div class="wbnrfz_eicw">
-
-            <div class="scrollable-tabs-container">
-                <div class="left-arrow">
-                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                        stroke="currentColor" class="size-6">
-                        <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 19.5 8.25 12l7.5-7.5" />
-                    </svg>
-
-                </div>
-
-                <ul>
-                    <li>
-                        <a href="eicw.html">Design System Introduction</a>
-                    </li>
-
-                    <li>
-                        <a href="eicw-2.html" class="active">Proposed Wayfinding Changes - Trains</a>
-                    </li>
-
-                    <li>
-                        <a href="eicw-3.html">Proposed Wayfinding Changes - Buses</a>
-                    </li>
-
-                    <li>
-                        <a href="eicw-4.html">Proposed UI/UX Changes</a>
-                    </li>
-
-                    <li>
-                        <a href="eicw-5.html">Rethinking CCL6 Signages</a>
-                    </li>
-                </ul>
-
-                <div class="right-arrow active">
-                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                        stroke="currentColor" class="size-6">
-                        <path stroke-linecap="round" stroke-linejoin="round" d="m8.25 4.5 7.5 7.5-7.5 7.5" />
-                    </svg>
-
-                </div>
-            </div>
-
             <div class="container container-mobile">
                 <div class="row justify-content-center">
                     <div class="col-lg-12">
                         <div class="row justify-content-center">
 
                             <!-- Preface -->
-                            <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms" id="pct">
+                            <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms">
                                 <div class="info justify-content-center">
-                                    <h2 class="mb-3 text-center" style="font-size: 30px; font-weight:bold;">Proposed
-                                        Wayfinding Changes - Trains</h2>
+                                    <h2 style="font-size: 30px; font-weight:bold;">Additions & Alterations</h2>
                                     <p style="text-align: left;">For this section, I intend to introduce incremental
                                         enhancements to the current system. As I mentioned, I do not want another new
                                         Design System, so I just made use of what is implemented currently and improved
@@ -184,7 +280,6 @@
                                         <button class="btn">Implementation Explorations</button>
                                     </a>
                                 </div>
-                                <hr>
                             </div>
                         </div>
                     </div>
@@ -195,7 +290,7 @@
 
 
     <!-- Section Header -->
-    <section class="breadcrumb-area-eicw-subs bg-img bg-overlay parallax" id="ci-img"
+    <section class="breadcrumb-area-eicw-subs bg-img bg-overlay-section" id="ci-img"
         style="background-image: url(img/c-i-light.png)">
         <div class="container h-100">
             <div class="row h-100 align-items-center">
@@ -585,7 +680,7 @@
 
 
     <!-- Section Header -->
-    <section class="breadcrumb-area-eicw-subs bg-img bg-overlay parallax" id="dsb-img"
+    <section class="breadcrumb-area-eicw-subs bg-img bg-overlay-section" id="dsb-img"
         style="background-image: url(img/eia-light.png)">
         <div class="container h-100">
             <div class="row h-100 align-items-center">
@@ -789,7 +884,7 @@
 
 
     <!-- Section Header -->
-    <section class="breadcrumb-area-eicw-subs bg-img bg-overlay parallax" id="ioi-img"
+    <section class="breadcrumb-area-eicw-subs bg-img bg-overlay-section" id="ioi-img"
         style="background-image: url(img/eia-light.png)">
         <div class="container h-100">
             <div class="row h-100 align-items-center">
@@ -1018,7 +1113,7 @@
 
 
     <!-- Section Header -->
-    <section class="breadcrumb-area-eicw-subs bg-img bg-overlay parallax" id="ie-img"
+    <section class="breadcrumb-area-eicw-subs bg-img bg-overlay-section" id="ie-img"
         style="background-image: url(img/ie-light.png)">
         <div class="container h-100">
             <div class="row h-100 align-items-center">
