--- a/eicw/eicw.html
+++ b/eicw/eicw.html
@@ -162,7 +162,9 @@
     </div>
 
 
-    <!-- Section Header -->
+    <!------------------------------------------------------------------------ Start of Sections ------------------------------------------------------------------------>
+
+    <!-- Cover Header -->
     <section class="breadcrumb-area-eicw-cover bg-img bg-overlay" id="cv-img"
         style="background-image: url(img/cover-light.png); height: 50vh;">
         <div class="container h-100">
@@ -173,14 +175,9 @@
         </div>
     </section>
 
-
-
-
-
-    <!-- Section Content -->
+    <!-- Title/Breadcrumbs -->
     <section class="about-me-sum clearfix">
         <div class="wbnrfz_eicw">
-
             <div class="page-header-section">
                 <div class="container container-mobile container-mobile-header">
                     <div class="breadcrumb-wrapper">
@@ -189,12 +186,10 @@
                                 <li class="breadcrumb-item">
                                     <a href="../index.html">
                                         <i class="fa-solid fa-house"></i>
-                                        Home
                                     </a>
                                 </li>
                                 <li class="breadcrumb-item">
-                                    <a href="#"><i
-                                            class="fa-solid fa-map-location"></i> EICW</a>     
+                                    <a href="#">EICW</a>
                                 </li>
                                 <!-- <li class="breadcrumb-item active" aria-current="page">
                                     EICW
@@ -250,11 +245,13 @@
                 <hr>
             </div>
 
+        </div>
 
+    </section>
 
-
-
-
+    <!-- Section Contents -->
+    <section class="about-me-sum clearfix">
+        <div class="wbnrfz_eicw">
             <div class="container container-mobile">
                 <div class="row justify-content-center">
                     <div class="col-lg-12">
@@ -263,7 +260,7 @@
                             <!-- Preface -->
                             <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms" id="dsi">
                                 <div class="info justify-content-center">
-                                    <h2 class="mb-3" style="font-size: 30px; font-weight:bold;">Design
+                                    <h2 style="font-size: 30px; font-weight:bold;">Design
                                         System Introduction</h2>
                                     <p style="text-align: left;">The new Wayfinding system was first launched on the
                                         Thomson-East
@@ -307,24 +304,6 @@
                                 <hr>
                             </div>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
                             <!-- Font Typeface -->
                             <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms" id="typeface">
                                 <h2 class="mb-3"
@@ -363,7 +342,6 @@
             </div>
         </div>
     </section>
-
 
     <!-- Section Header -->
     <section class="breadcrumb-area-eicw-subs bg-img bg-overlay parallax" id="eia-img"
