XXXX-XX Feature Update for Version Next (6.0.0)

--- a/eicw/eicw-2.html
+++ b/eicw/eicw-2.html
@@ -15,7 +15,7 @@
 
     <link rel="icon" href="../img/core-img/favicon.png">
 
-    <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.7.2/css/all.css">
+    <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v7.0.0/css/all.css" />
     <link rel='stylesheet' href='https://unpkg.com/swiper@6.8.1/swiper-bundle.min.css'>
 
     <link rel="stylesheet" href="../css/style.css">
@@ -164,7 +164,7 @@
 
     <!-- Cover Header -->
     <section class="breadcrumb-area-eicw-cover bg-img bg-overlay" id="cv-img"
-        style="background-image: url(img/cover-light.png); height: 50vh;">
+        style="background-image: url(img/cover-light.png); height: 68vh;">
         <div class="container h-100">
             <div class="row h-100 align-items-center">
                 <div class="col-12">
@@ -177,7 +177,7 @@
     <section class="about-me-sum clearfix">
         <div class="wbnrfz_eicw">
             <div class="page-header-section">
-                <div class="container container-mobile container-mobile-header">
+                <div class="container-xxl container-mobile container-mobile-header">
                     <div class="breadcrumb-wrapper">
                         <nav aria-label="breadcrumb">
                             <ol class="breadcrumb">
@@ -195,7 +195,7 @@
                             </ol>
                         </nav>
                         <div class="page-title-wrapper">
-                            <h1 class="page-title">Proposed Wayfinding Changes - Trains</h1>
+                            <h1 class="page-title-single">Proposed Wayfinding Changes - Trains</h1>
                             <p class="page-subtitle">9 mins read</p>
                         </div>
                     </div>
@@ -1333,26 +1333,27 @@
     </section>
 
 
-    <footer class="footer-area">
-        <div class="container">
-            <div class="footer-content d-flex flex-column align-items-center text-center">
-                <!-- Social Links -->
-                <div class="social-info">
-                    <a href="https://github.com/nurafianZulkifli"><i class="fa-brands fa-github"
-                            aria-hidden="true"></i></a>
-                    <a href="https://twitter.com/nrfzlkf_"><i class="fa-brands fa-x-twitter" aria-hidden="true"></i></a>
-                    <a href="https://www.facebook.com/Nrfnzlkf/"><i class="fa-brands fa-facebook"
-                            aria-hidden="true"></i></a>
-                    <a href="https://www.instagram.com/nrfzlkf/"><i class="fa-brands fa-instagram"
-                            aria-hidden="true"></i></a>
-                </div>
-                <!-- Copywrite Text -->
-                <div class="copywrite-text">
-                    <p>&copy;
-                        <script>document.write(new Date().getFullYear());</script> Nurafian Zulkifli
-                    </p>
-                </div>
+    <!-- Footer -->
+    <footer class="footer">
+        <div class="footer-content">
+            <div class="footer-social">
+                <a href="https://github.com/nurafianZulkifli" class="social-link">
+                    <i class="fa-brands fa-github" aria-hidden="true"></i>
+                </a>
+                <a href="https://twitter.com/nrfzlkf_" class="social-link">
+                    <i class="fa-brands fa-x-twitter" aria-hidden="true"></i>
+                </a>
+                <a href="https://www.facebook.com/Nrfnzlkf/" class="social-link">
+                    <i class="fa-brands fa-facebook" aria-hidden="true"></i>
+                </a>
+                <a href="https://www.instagram.com/nrfzlkf/" class="social-link">
+                    <i class="fa-brands fa-instagram" aria-hidden="true"></i>
+                </a>
             </div>
+        </div>
+
+        <div class="footer-copy">
+            © 2025 Nurafian Zulkifli
         </div>
     </footer>
 
@@ -1360,6 +1361,8 @@
         data-bg="#f2f3e5" data-fg="#000" data-font-family="Onest, sans-serif" data-zindex="12345111111"
         data-message="This website uses cookies to provide necessary site functionality and to improve your experience. By using this website, you agree to our use of cookies.">
         </script>
+
+    <script src="../js/navtabs.js"></script>
 
     <script src="js/eicw-2.js"></script>
 
