--- a/eicw/eicw.html
+++ b/eicw/eicw.html
@@ -166,7 +166,7 @@
 
     <!-- Cover Header -->
     <section class="breadcrumb-area-eicw-cover bg-img bg-overlay" id="cv-img"
-        style="background-image: url(img/cover-light.png); height: 50vh;">
+        style="background-image: url(img/cover-light.png); height: 68vh;">
         <div class="container h-100">
             <div class="row h-100 align-items-center">
                 <div class="col-12">
@@ -179,7 +179,7 @@
     <section class="about-me-sum clearfix">
         <div class="wbnrfz_eicw">
             <div class="page-header-section">
-                <div class="container container-mobile container-mobile-header">
+                <div class="container-xxl container-mobile container-mobile-header">
                     <div class="breadcrumb-wrapper">
                         <nav aria-label="breadcrumb">
                             <ol class="breadcrumb">
@@ -197,8 +197,8 @@
                             </ol>
                         </nav>
                         <div class="page-title-wrapper">
-                            <h1 class="page-title">Experimenting Improvements of Current Wayfinding</h1>
-                            <p class="page-subtitle">7 mins read</p>
+                            <h1 class="page-title-single">Experimenting Improvements of Current Wayfinding</h1>
+                            <p class="page-subtitle">4 mins read</p>
                         </div>
                     </div>
                 </div>
@@ -269,25 +269,37 @@
                                         texts.
                                         I for one, am a
                                         huge fan of this new design.
-                                        <br><br>I love icons and pictorials as compared to texts.
-                                        Of course, with every new implementations, there has got to be areas that
-                                        can be
-                                        improved, and in
-                                        this microsite, I will be brainstorming on ideas on how to make the current
-                                        system better. Do take
-                                        note, these are just
-                                        ideas and concepts, and technicalities like Dimensions & Measurements will
-                                        not
-                                        be taken into
-                                        account.
-                                        Overall Assets and Designs' credit go to the Land Transport Authority.
-                                        <br><br> The Colour Palettes provided here are matched to be identical to
-                                        the
-                                        real-life
-                                        counterparts as
-                                        well.
                                     </p>
                                 </div>
+
+                                <!-- Evolution of our Transit System Design -->
+                                <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms">
+                                    <div class="banner-eicw">
+                                        <a href="img/evo-light.png" id="evo" class="portfolio-img">
+                                            <img src="img/evo-light.png" id="evo-img" class="img-fluid" alt="evo">
+                                        </a>
+                                    </div>
+                                </div>
+
+                                <p style="text-align: left;">I love icons and pictorials as compared to texts.
+                                    Of course, with every new implementations, there has got to be areas that
+                                    can be
+                                    improved, and in
+                                    this microsite, I will be brainstorming on ideas on how to make the current
+                                    system better. Do take
+                                    note, these are just
+                                    ideas and concepts, and technicalities like Dimensions & Measurements will
+                                    not
+                                    be taken into
+                                    account.
+                                    Overall Assets and Designs' credit go to the Land Transport Authority.
+                                    <br><br> The Colour Palettes provided here are matched to be identical to
+                                    the
+                                    real-life
+                                    counterparts as
+                                    well.
+                                </p>
+                                </p>
 
                                 <div class="portfolio-filter portfolio-filter-sub mt-3 wow fadeInUp"
                                     data-wow-delay="100ms" style="padding-top: 1em;">
@@ -344,7 +356,7 @@
     </section>
 
     <!-- Section Header -->
-    <section class="breadcrumb-area-eicw-subs bg-img bg-overlay parallax" id="eia-img"
+    <section class="breadcrumb-area-eicw-subs bg-img bg-overlay-section parallax" id="eia-img"
         style="background-image: url(img/eia-light.png)">
         <div class="container h-100">
             <div class="row h-100 align-items-center">
@@ -428,48 +440,21 @@
     </section>
 
 
-    <!-- Overview Content -->
-    <section class="about-me-summ clearfix" style="padding-top: 10px;">
-        <div class="wbnrfz_details_body">
-            <div class="container container-xxl">
-                <div class="row justify-content-center">
-                    <div class="col-lg-12">
-                        <div class="row justify-content-center">
-
-                            <!-- Evolution of our Transit System Design -->
-                            <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms">
-                                <h2 class="mb-3"
-                                    style="font-size: 30px; font-weight:bold; text-align: center; padding-top: 10px;">
-                                    Evolution of our Transit System Design</h2>
-                                <div class="banner-eicw">
-                                    <a href="img/evo-light.png" id="evo" class="portfolio-img">
-                                        <img src="img/evo-light.png" id="evo-img" class="img-fluid" alt="evo">
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        </div>
-    </section>
-
 
     <!-- Footer -->
     <footer class="footer">
         <div class="footer-content">
             <div class="footer-social">
-                <a href="#" class="social-link">
+                <a href="https://github.com/nurafianZulkifli" class="social-link">
                     <i class="fa-brands fa-github" aria-hidden="true"></i>
                 </a>
-                <a href="#" class="social-link">
+                <a href="https://twitter.com/nrfzlkf_" class="social-link">
                     <i class="fa-brands fa-x-twitter" aria-hidden="true"></i>
                 </a>
-                <a href="#" class="social-link">
+                <a href="https://www.facebook.com/Nrfnzlkf/" class="social-link">
                     <i class="fa-brands fa-facebook" aria-hidden="true"></i>
                 </a>
-                <a href="#" class="social-link">
+                <a href="https://www.instagram.com/nrfzlkf/" class="social-link">
                     <i class="fa-brands fa-instagram" aria-hidden="true"></i>
                 </a>
             </div>
