--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
     </section><!-- End Hero -->
 
 
-    <div class="pw-portfolio-area clearfix" id="featured">
+    <div class="pw-portfolio-area-featured clearfix" id="featured">
         <div class="container-fluid">
             <div class="row">
                 <div class="col-12">
@@ -386,16 +386,16 @@
     <footer class="footer">
         <div class="footer-content">
             <div class="footer-social">
-                <a href="#" class="social-link">
+                <a href="https://github.com/nurafianZulkifli" class="social-link">
                     <i class="fa-brands fa-github" aria-hidden="true"></i>
                 </a>
-                <a href="#" class="social-link">
+                <a href="https://twitter.com/nrfzlkf_" class="social-link">
                     <i class="fa-brands fa-x-twitter" aria-hidden="true"></i>
                 </a>
-                <a href="#" class="social-link">
+                <a href="https://www.facebook.com/Nrfnzlkf/" class="social-link">
                     <i class="fa-brands fa-facebook" aria-hidden="true"></i>
                 </a>
-                <a href="#" class="social-link">
+                <a href="https://www.instagram.com/nrfzlkf/" class="social-link">
                     <i class="fa-brands fa-instagram" aria-hidden="true"></i>
                 </a>
             </div>
@@ -411,7 +411,7 @@
         data-message="This website uses cookies to provide necessary site functionality and to improve your experience. By using this website, you agree to our use of cookies.">
         </script>
 
-    <script src="../js/navtabs.js"></script>
+    <script src="js/navtabs.js"></script>
 
     <script src="js/theme-index.js"></script>
 
