--- a/works-by-nrfz copy.html
+++ b/works-by-nrfz copy.html
@@ -40,234 +40,106 @@
 
 <body>
 
-  <!-- Navigation Bar -->
-  <nav class="navbar-container">
-    <div class="navbar">
-      <!-- Logo -->
-      <a href="../index.html"><img src="../img/core-img/logo.png" alt="logo" class="logo" /></a>
+  <!-- Preloader Section -->
+  <!-- <div id="preloader">
+    <div class="loader"></div>
+    <p id="preloader-text">Just a moment...</p>
+  </div> -->
 
-      <!-- Navigation Links -->
-      <ul class="navbar-nav" id="navbarNav">
-        <li class="nav-item">
-          <a href="index.html" class="nav-link">
-            <i class="fa-solid fa-regular fa-house"></i>
-            <span>Home</span>
-          </a>
-        </li>
-        <li class="nav-item">
-          <a href="about.html" class="nav-link">
-            <i class="fa-solid fa-regular fa-circle-user"></i>
-            <span>About</span>
-          </a>
-        </li>
-        <li class="nav-item">
-          <a href="#" class="nav-link active">
-            <i class="fa-solid fa-pen-paintbrush"></i>
-            <span>Works by NRFZ</span>
-          </a>
-        </li>
-        <li class="nav-item">
-          <a href="eicw/eicw.html" class="nav-link">
-            <i class="fa-solid fa-map-location"></i>
-            <span>EICW</span>
-          </a>
-        </li>
-        <li class="nav-item">
-          <a href="blog.html" class="nav-link">
-            <i class="fa-solid fa-comment"></i>
-            <span>Blog</span>
-          </a>
-        </li>
-        <li class="nav-item">
-          <a href="#" class="nav-item">
-            <button class="wbnrfz_btn_theme" id="dark-mode-toggle-desktop" title="Toggle Dark/Light Mode!">
-              <i class="fa-solid fa-moon-stars" id="theme-icon-desktop"></i>
-            </button>
-          </a>
-        </li>
-      </ul>
 
-      <!-- Mobile Toggle -->
-      <button class="mobile-toggle" id="mobileToggle">
-        <div class="hamburger">
-          <span></span>
-          <span></span>
-          <span></span>
-        </div>
-      </button>
-    </div>
+  <header>
+    <a href="./index.html"><img src="./img/core-img/logo.png" alt="logo" class="logo" /></a>
 
-    </div>
-  </nav>
+    <input type="checkbox" id="check" />
+    <label for="check" class="icons">
+      <i class="fa-solid fa-bars" id="menu-icon"></i>
+      <i class="fa-solid fa-xmark" id="close-icon"></i>
+    </label>
 
-  <!-- Mobile Menu Overlay -->
-  <div class="mobile-menu-overlay" id="mobileMenuOverlay"></div>
-
-  <!-- Mobile Menu -->
-  <div class="mobile-menu" id="mobileMenu">
-    <div class="mobile-menu-header">
-      <a href="#" class="mobile-menu-brand">
-        <span class="brand-text">
-          <li class="mobile-menu-item mobile-theme-toggle">
-            <button class="wbnrfz_btn_theme mobile-theme-btn" id="dark-mode-toggle-mobile"
-              title="Toggle Dark/Light Mode!">
-              <i class="fa-solid fa-moon-stars" id="theme-icon-mobile"></i>
-            </button>
-          </li>
-        </span>
+    <nav class="navbar navbar-mobile">
+      <a href="./index.html" class="nav-item">Home</a>
+      <a href="./about.html" class="nav-item">About</a>
+      <a href="#" class="nav-item active">Works By NRFZ</a>
+      <a href="eicw/eicw.html" class="nav-item">EICW</a>
+      <a href="./blog.html" class="nav-item">Blog</a>
+      <a href="#" class="nav-item">
+        <button class="wbnrfz_btn_theme" id="dark-mode-toggle" title="Toggle Dark/Light Mode!">
+          <i class="fa-solid fa-moon-stars" id="theme-icon"></i>
+        </button>
       </a>
-      <button class="mobile-menu-close" id="mobileMenuClose">
-        <span>×</span>
-      </button>
-    </div>
+    </nav>
+  </header>
 
-    <ul class="mobile-menu-nav">
-      <li class="mobile-menu-item">
-        <a href="index.html" class="mobile-menu-link">
-          <i class="fa-solid fa-regular fa-house"></i>
-          <span>Home</span>
-        </a>
-      </li>
-      <li class="mobile-menu-item">
-        <a href="about.html" class="mobile-menu-link">
-          <i class="fa-solid fa-regular fa-circle-user"></i>
-          <span>About</span>
-        </a>
-      </li>
-      <li class="mobile-menu-item">
-        <a href="#" class="mobile-menu-link active">
-          <i class="fa-solid fa-pen-paintbrush"></i>
-          <span>Works by NRFZ</span>
-        </a>
-      </li>
-      <li class="mobile-menu-item">
-        <a href="eicw/eicw.html" class="mobile-menu-link">
-          <i class="fa-solid fa-map-location"></i>
-          <span>EICW</span>
-        </a>
-      </li>
-      <li class="mobile-menu-item">
-        <a href="blog.html" class="mobile-menu-link">
-          <i class="fa-solid fa-comment"></i>
-          <span>Blog</span>
-        </a>
-      </li>
-    </ul>
-  </div>
 
-  <!------------------------------------------------------------------------ Start of Sections ------------------------------------------------------------------------>
-  <!-- Cover Header -->
-  <section class="breadcrumb-area-eicw-cover bg-img bg-overlay" id="cv-about"
-    style="background-image: url(img/bg-img/hero-bg-small.png); height: 68vh;">
-    <div class="container h-100">
-      <div class="row h-100 align-items-center">
-        <div class="col-12">
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- Breadcrumbs -->
-  <section class="about-me-sum clearfix">
-    <div class="wbnrfz_eicw">
-      <div class="page-header-section">
-        <div class="container container-xxl container-mobile container-mobile-header">
-          <div class="breadcrumb-wrapper">
-            <nav aria-label="breadcrumb">
-              <ol class="breadcrumb">
-                <li class="breadcrumb-item">
-                  <a href="../index.html">
-                    <i class="fa-solid fa-house"></i>
-                  </a>
-                </li>
-                <li class="breadcrumb-item">
-                  <a href="#">EICW</a>
-                </li>
-              </ol>
-            </nav>
-            <div class="page-title-wrapper">
-              <div style="display: flex; justify-content: space-between; align-items: center; flex-wrap: wrap;">
-                <div>
-                  <h1 class="page-title" id="filter-title">All Projects</h1>
-                </div>
-                <div style="position: relative; max-width: 400px;">
-                  <i class="fa-solid fa-search"
-                    style="position: absolute; left: 12px; top: 50%; transform: translateY(-50%); color: #6c757d; z-index: 1;"></i>
-                  <input type="text" id="portfolio-search" class="form-control" placeholder=" Search for a project"
-                    style="padding-left: 35px; width: 100%;">
-                </div>
-
+  <section class="wbnrfz-summ breadcrumb-area-eicw-cover bg-img parallax" id="cv-about"
+    style="background-image: url(img/bg-img/hero-bg-small.png); height: 100vh;">
+    <div class="wbnrfz_details_blog">
+      <div class="container">
+        <div class="portfolio-controls d-flex justify-content-between align-items-center">
+          <!-- Filter Buttons -->
+          <div class="portfolio-filter mt-3">
+            <div class="col-lg-12">
+              <div class="main-title">
+                <nav aria-label="breadcrumb">
+                  <ol class="breadcrumb">
+                    <li class="breadcrumb-item"><a href="https://nurafianzulkifli.com/index.html"> Home</a>
+                    </li>
+                    <li class="breadcrumb-item active"><a href="https://nurafianzulkifli.com/works-by-nrfz.html"> Works
+                        By NRFZ
+                      </a>
+                    </li>
+                  </ol>
+                </nav>
+                <h1 class="brc">Works By NRFZ</h1>
               </div>
             </div>
           </div>
-
-        </div>
-
-
-        <div class="scrollable-tabs-container">
-          <div class="left-arrow">
-            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-              stroke="currentColor" class="size-6">
-              <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 19.5 8.25 12l7.5-7.5" />
-            </svg>
-          </div>
-
-          <ul style="padding: 12px 0px;">
-            <li>
-              <a href="#" class="btn-fliter active" data-filter="*">All Projects</a>
-            </li>
-
-            <li>
-              <a href="#" class="btn-fliter" data-filter=".ds">Designs</a>
-            </li>
-
-            <li>
-              <a href="#" class="btn-fliter" data-filter=".mc">Mockups</a>
-            </li>
-
-            <li>
-              <a href="#" class="btn-fliter" data-filter=".ig">Infographics</a>
-            </li>
-
-            <li>
-              <a href="#" class="btn-fliter" data-filter=".lg">Logos</a>
-            </li>
-
-            <li>
-              <a href="#" class="btn-fliter" data-filter=".in">Innovations</a>
-            </li>
-          </ul>
-
-          <div class="right-arrow active">
-            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-              stroke="currentColor" class="size-6">
-              <path stroke-linecap="round" stroke-linejoin="round" d="m8.25 4.5 7.5 7.5-7.5 7.5" />
-            </svg>
-
+          <!-- Collapsible Header -->
+          <div class="collapsible-header" data-bs-toggle="collapse" data-bs-target="#portfolioFilter"
+            aria-expanded="false" aria-controls="portfolioFilter" style="cursor: pointer;" title="Filter/Sort">
+            <i class="fa-solid fa-chevron-down nav-chev"></i>
           </div>
         </div>
-        <hr>
+        <!-- Collapsible Content -->
+        <div id="portfolioFilter" class="collapse">
+          <div class="portfolio-controls">
+            <!-- Filter Buttons -->
+            <div class="portfolio-filter">
+              <button class="btn btn-filter active" data-filter="*">All Projects</button>
+              <button class="btn btn-filter" data-filter=".ds">Designs</button>
+              <button class="btn btn-filter" data-filter=".mc">Mockups</button>
+              <button class="btn btn-filter" data-filter=".ig">Infographics</button>
+              <button class="btn btn-filter" data-filter=".lg">Logos</button>
+              <button class="btn btn-filter" data-filter=".in">Innovations</button>
+            </div>
+
+            <!-- Sort Dropdown -->
+            <div class="portfolio-sort">
+              <label for="sort-options">Sort By:</label>
+              <select id="sort-options">
+                <option value="newest">Newest</option>
+                <option value="oldest">Oldest</option>
+                <option value="alphabetical">Alphabetical</option>
+              </select>
+            </div>
+          </div>
+        </div>
       </div>
-
     </div>
-
   </section>
 
 
-  <!-- Section Contents -->
   <section class="about-me-summ clearfix">
-    <div class="pw-portfolio-area clearfix">
+
+    <div class="pw-portfolio-area clearfix wow fadeInUp" style="padding-top: 1em; padding-bottom: 2em;">
       <div class="container-fluid">
         <div class="row">
           <div class="col-12">
-            <div style="display: flex; justify-content: flex-end; align-items: center; margin-bottom: 20px;">
-              <div class="portfolio-sort">
-                <label for="sort-options">Sort By:</label>
-                <select id="sort-options">
-                  <option value="newest">Newest</option>
-                  <option value="oldest">Oldest</option>
-                  <option value="alphabetical">Alphabetical</option>
-                </select>
+            <div class="section-heading text-center ">
+              <h2 id="filter-title">All Projects</h2>
+              <div class="col-12 text-center mb-3">
+                <input type="text" id="portfolio-search" class="form-control" placeholder="Search Project"
+                  style="max-width:400px;display:inline-block;">
               </div>
             </div>
           </div>
@@ -277,7 +149,6 @@
               <p id="no-results-message" class="text-center mt-3" style="display: none;">No Results Available</p>
             </div>
           </div>
-
 
           <div class="row pw-portfolio">
             <div class="col-12 col-sm-6 col-lg-3 single_gallery_item ds mb-30 " data-year="2025">
@@ -538,7 +409,6 @@
 
   <script src="js/isotope.pkgd.min.js"></script>
 
-  <script src="js/dstabs.js"></script>
 
   <script src="js/portFunct.js"></script>
 
