XXXX-XX Feature Update for Version Next (6.0.0)

--- a/works-by-nrfz.html
+++ b/works-by-nrfz.html
@@ -190,7 +190,7 @@
                 <div>
                   <h1 class="page-title" id="filter-title">All Projects</h1>
                 </div>
-                <div style="position: relative; max-width: 400px;">
+                <div style="position: relative; max-width: 400px; margin-top: 5px;">
                   <i class="fa-solid fa-search"
                     style="position: absolute; left: 12px; top: 50%; transform: translateY(-50%); color: #6c757d; z-index: 1;"></i>
                   <input type="text" id="portfolio-search" class="form-control" placeholder=" Search for a project"
@@ -212,7 +212,7 @@
             </svg>
           </div>
 
-          <ul style="padding: 12px 0px;">
+          <ul>
             <li>
               <a href="#" class="btn-fliter active" data-filter="*">All Projects</a>
             </li>
